--- a/backend/package.json
+++ b/backend/package.json
@@ -15,7 +15,8 @@
     "mysql": "^2.18.1",
     "ts-node": "^10.1.0",
     "typeorm": "^0.2.34",
-    "typescript": "^4.3.5"
+    "typescript": "^4.3.5",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/jsonwebtoken": "^8.5.4",
@@ -24,6 +25,7 @@
     "@types/koa__cors": "^3.0.3",
     "@types/koa__router": "^8.0.7",
     "@types/node": "^16.4.3",
+    "@types/uuid": "^8.3.1",
     "@typescript-eslint/eslint-plugin": "^4.28.5",
     "@typescript-eslint/parser": "^4.28.5",
     "eslint": "^7.31.0"
