--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,46 +1,51 @@
 {
-  "name": "front_study",
-  "version": "1.0.0",
-  "main": "index.js",
-  "license": "MIT",
-  "devDependencies": {
-    "@babel/core": "^7.14.8",
-    "@babel/preset-env": "^7.14.9",
-    "@babel/preset-react": "^7.14.5",
-    "@types/react": "^17.0.15",
-    "@types/react-redux": "^7.1.16",
-    "@types/react-dom": "^17.0.9",
-    "@types/react-router-dom": "^5.1.8",
-    "@types/styled-components": "^5.1.12",
-    "babel-loader": "^8.2.2",
-    "html-loader": "1.0.0-alpha.0",
-    "html-webpack-plugin": "^5.3.2",
-    "webpack": "^5.3.2",
-    "webpack-cli": "^4.1.0",
-    "webpack-dev-server": "^3.11.0"
-  },
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack serve"
-  },
-  "dependencies": {
-    "@reduxjs/toolkit": "^1.6.1",
-    "css-loader": "^6.2.0",
-    "dotenv": "^10.0.0",
-    "dotenv-webpack": "^7.0.3",
-    "file-loader": "^6.2.0",
-    "node-sass": "^6.0.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-redux": "^7.2.2",
-    "react-router-dom": "^5.2.0",
-    "redux-saga": "^1.1.3",
-    "sass-loader": "^12.1.0",
-    "style-loader": "^3.2.1",
-    "styled-components": "^5.3.0",
-    "swiper": "^6.8.2",
-    "ts-loader": "^9.2.4",
-    "typescript": "^4.3.5",
-    "url-loader": "^4.1.1"
-  }
+    "name": "front_study",
+    "version": "1.0.0",
+    "main": "index.js",
+    "license": "MIT",
+    "devDependencies": {
+        "@babel/core": "^7.14.8",
+        "@babel/preset-env": "^7.14.9",
+        "@babel/preset-react": "^7.14.5",
+        "@types/react": "^17.0.15",
+        "@types/react-redux": "^7.1.16",
+        "@types/react-dom": "^17.0.9",
+        "@types/react-router-dom": "^5.1.8",
+        "@types/styled-components": "^5.1.12",
+        "babel-loader": "^8.2.2",
+        "html-loader": "1.0.0-alpha.0",
+        "html-webpack-plugin": "^5.3.2",
+        "webpack": "^5.3.2",
+        "webpack-cli": "^4.1.0",
+        "webpack-dev-server": "^3.11.0"
+    },
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "start": "webpack serve"
+    },
+    "dependencies": {
+        "@reduxjs/toolkit": "^1.6.1",
+        "css-loader": "^6.2.0",
+        "date-fns": "^2.23.0",
+        "dotenv": "^10.0.0",
+        "dotenv-webpack": "^7.0.3",
+        "file-loader": "^6.2.0",
+        "node-sass": "^6.0.1",
+        "quill-image-resize-module": "^3.0.0",
+        "quill-image-upload": "^0.1.3",
+        "quill-image-uploader": "^1.2.2",
+        "react": "^17.0.2",
+        "react-dom": "^17.0.2",
+        "react-quill": "^1.3.3",
+        "react-redux": "^7.2.2",
+        "react-router-dom": "^5.2.0",
+        "redux-saga": "^1.1.3",
+        "sass-loader": "^12.1.0",
+        "style-loader": "^3.2.1",
+        "styled-components": "^5.3.0",
+        "swiper": "^6.8.2",
+        "ts-loader": "^9.2.4",
+        "typescript": "^4.3.5",
+        "url-loader": "^4.1.1"
+    }
 }
