--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     },
     "dependencies": {
         "@reduxjs/toolkit": "^1.6.1",
+        "axios": "^0.21.1",
         "css-loader": "^6.2.0",
         "date-fns": "^2.23.0",
         "dotenv": "^10.0.0",
@@ -47,5 +48,6 @@
         "ts-loader": "^9.2.4",
         "typescript": "^4.3.5",
         "url-loader": "^4.1.1"
-    }
+    },
+    "proxy": "http://localhost:5000"
 }
