--- a/backend/package.json
+++ b/backend/package.json
@@ -5,24 +5,29 @@
     "license": "MIT",
     "dependencies": {
         "@koa/cors": "^3.1.0",
+        "@koa/multer": "^3.0.0",
         "@koa/router": "^10.1.0",
+        "aws-sdk": "^2.979.0",
         "jsonwebtoken": "^8.5.1",
         "koa": "^2.13.1",
         "koa-body": "^4.2.0",
         "koa-helmet": "^6.1.0",
         "koa-logger": "^3.2.1",
+        "koa-multer": "^1.0.2",
         "koa-router": "^10.0.0",
         "mysql": "^2.18.1",
         "ts-node": "^10.1.0",
         "typeorm": "^0.2.34",
         "typescript": "^4.3.5",
-        "uuid": "^8.3.2"
+        "uuid": "^8.3.2",
+        "uuid4": "^2.0.2"
     },
     "devDependencies": {
         "@types/jsonwebtoken": "^8.5.4",
         "@types/koa-logger": "^3.1.1",
         "@types/koa-router": "^7.4.4",
         "@types/koa__cors": "^3.0.3",
+        "@types/koa__multer": "^2.0.3",
         "@types/koa__router": "^8.0.7",
         "@types/node": "^16.4.3",
         "@types/uuid": "^8.3.1",
