--- a/backend/package.json
+++ b/backend/package.json
@@ -8,6 +8,7 @@
         "@koa/multer": "^3.0.0",
         "@koa/router": "^10.1.0",
         "aws-sdk": "^2.979.0",
+        "https": "^1.0.0",
         "jsonwebtoken": "^8.5.1",
         "koa": "^2.13.1",
         "koa-body": "^4.2.0",
@@ -15,6 +16,7 @@
         "koa-logger": "^3.2.1",
         "koa-multer": "^1.0.2",
         "koa-router": "^10.0.0",
+        "multer": "^1.4.3",
         "mysql": "^2.18.1",
         "ts-node": "^10.1.0",
         "typeorm": "^0.2.34",
