--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
         "koa-router": "^10.0.0",
         "multer": "^1.4.3",
         "mysql": "^2.18.1",
+        "nodemon": "^2.0.12",
         "ts-node": "^10.1.0",
         "typeorm": "^0.2.34",
         "typescript": "^4.3.5",
