--- a/backend/package.json
+++ b/backend/package.json
@@ -14,7 +14,6 @@
         "koa-body": "^4.2.0",
         "koa-helmet": "^6.1.0",
         "koa-logger": "^3.2.1",
-        "koa-multer": "^1.0.2",
         "koa-router": "^10.0.0",
         "multer": "^1.4.3",
         "mysql": "^2.18.1",
@@ -22,8 +21,7 @@
         "ts-node": "^10.1.0",
         "typeorm": "^0.2.34",
         "typescript": "^4.3.5",
-        "uuid": "^8.3.2",
-        "uuid4": "^2.0.2"
+        "uuid": "^8.3.2"
     },
     "devDependencies": {
         "@types/jsonwebtoken": "^8.5.4",
