--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,8 @@
         "koa-helmet": "^6.1.0",
         "koa-logger": "^3.2.1",
         "koa-router": "^10.0.0",
+        "koa-send": "^5.0.1",
+        "koa-static": "^5.0.0",
         "multer": "^1.4.3",
         "mysql": "^2.18.1",
         "nodemon": "^2.0.12",
@@ -27,6 +29,8 @@
         "@types/jsonwebtoken": "^8.5.4",
         "@types/koa-logger": "^3.1.1",
         "@types/koa-router": "^7.4.4",
+        "@types/koa-send": "^4.1.3",
+        "@types/koa-static": "^4.0.2",
         "@types/koa__cors": "^3.0.3",
         "@types/koa__multer": "^2.0.3",
         "@types/koa__router": "^8.0.7",
