--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,7 +25,8 @@
         "build": "webpack"
     },
     "dependencies": {
-        "@reduxjs/toolkit": "^1.6.1",
+        "@redux-saga/core": "^1.1.3",
+        "@reduxjs/toolkit": "^1.6.2",
         "axios": "^0.21.1",
         "css-loader": "^6.2.0",
         "date-fns": "^2.23.0",
