--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,7 +14,7 @@
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
         "start": "webpack serve",
-        "build": "webpack"
+        "build": "webpack  --mode=development"
     },
     "dependencies": {
         "@redux-saga/core": "^1.1.3",
