--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,6 +5,7 @@
     "license": "MIT",
     "devDependencies": {
         "@types/react-dom": "^17.0.9",
+        "@types/react-pdf": "^5.7.2",
         "@types/react-router-dom": "^5.3.1",
         "@types/styled-components": "^5.1.15",
         "webpack": "^5.3.2",
@@ -16,7 +17,12 @@
         "start": "webpack serve",
         "build": "webpack  --mode=development"
     },
+    "resolutions": {
+        "@types/react": "17.0.2",
+        "@types/react-dom": "17.0.2"
+    },
     "dependencies": {
+        "@react-pdf/renderer": "^2.2.0",
         "@redux-saga/core": "^1.1.3",
         "@reduxjs/toolkit": "^1.6.2",
         "axios": "^0.23.0",
@@ -26,8 +32,9 @@
         "dotenv-webpack": "^7.0.3",
         "file-loader": "^6.2.0",
         "html-webpack-plugin": "^5.4.0",
-        "react": "^17.0.2",
-        "react-dom": "^17.0.2",
+        "react": "17.0.2",
+        "react-dom": "17.0.2",
+        "react-pdf": "^5.7.2",
         "react-quill": "^1.3.5",
         "react-redux": "^7.2.5",
         "react-router-dom": "^5.3.0",
